syntax = "proto3";
package cosmos.accesscontrol.v1beta1;

import "cosmos/accesscontrol/accesscontrol.proto";
import "cosmos/accesscontrol/constants.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/cosmos/cosmos-sdk/types/accesscontrol";

message LegacyAccessOperationWithSelector {
  AccessOperation operation = 1;
  AccessOperationSelectorType selector_type = 2;
  string selector = 3;
}

message LegacyWasmDependencyMapping {
  bool enabled = 1;
  repeated LegacyAccessOperationWithSelector access_ops = 2 [(gogoproto.nullable) = false];
  string reset_reason = 3;
  string contract_address = 4;
}
